--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,10 @@
         </repository>
     </repositories>
 
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 
 </project>
