--- a/pom.xml
+++ b/pom.xml
@@ -8,65 +8,53 @@
     <artifactId>Game</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jmonkeyengine</groupId>
-            <artifactId>jme3-core</artifactId>
-            <version>3.2.4-stable</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jmonkeyengine</groupId>
-            <artifactId>jme3-desktop</artifactId>
-            <version>3.2.2-stable</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jmonkeyengine</groupId>
-            <artifactId>jme3-lwjgl</artifactId>
-            <version>3.1.0-beta1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jmonkeyengine</groupId>
-            <artifactId>jme3-plugins</artifactId>
-            <version>3.2.2-stable</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jmonkeyengine</groupId>
-            <artifactId>jme3-bullet</artifactId>
-            <version>3.2.1-stable</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jmonkeyengine</groupId>
-            <artifactId>jme3-bullet-native</artifactId>
-            <version>3.2.2-stable</version>
-        </dependency>
-
-
-
-
-
-
-
-    </dependencies>
+    <properties>
+        <jme3_g>org.jmonkeyengine</jme3_g>
+        <jme3_v>3.1.0-stable</jme3_v>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <repositories>
         <repository>
-            <id>jme3-repo</id>
-            <name>JME3 maven repo</name>
-            <url>https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine</url>
+            <id>jcenter</id>
+            <url>http://jcenter.bintray.com</url>
         </repository>
         <repository>
-            <id>jme3-repo</id>
-            <name>JME3 maven repo</name>
+            <id>spring</id>
             <url>https://repo.spring.io/plugins-release</url>
         </repository>
     </repositories>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>${jme3_g}</groupId>
+            <artifactId>jme3-core</artifactId>
+            <version>${jme3_v}</version>
+        </dependency>
+        <dependency>
+            <groupId>${jme3_g}</groupId>
+            <artifactId>jme3-desktop</artifactId>
+            <version>${jme3_v}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>${jme3_g}</groupId>
+            <artifactId>jme3-lwjgl</artifactId>
+            <version>${jme3_v}</version>
+        </dependency>
+        <dependency>
+            <groupId>${jme3_g}</groupId>
+            <artifactId>jme3-bullet</artifactId>
+            <version>${jme3_v}</version>
+        </dependency>
+        <dependency>
+            <groupId>${jme3_g}</groupId>
+            <artifactId>jme3-plugins</artifactId>
+            <version>${jme3_v}</version>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
