--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <jme3_g>org.jmonkeyengine</jme3_g>
-        <jme3_v>3.1.0-stable</jme3_v>
+        <jme3_groupId>org.jmonkeyengine</jme3_groupId>
+        <jme3_version>3.2.2-stable</jme3_version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -28,30 +28,30 @@
 
     <dependencies>
         <dependency>
-            <groupId>${jme3_g}</groupId>
+            <groupId>${jme3_groupId}</groupId>
             <artifactId>jme3-core</artifactId>
-            <version>${jme3_v}</version>
+            <version>${jme3_version}</version>
         </dependency>
         <dependency>
-            <groupId>${jme3_g}</groupId>
+            <groupId>${jme3_groupId}</groupId>
             <artifactId>jme3-desktop</artifactId>
-            <version>${jme3_v}</version>
+            <version>${jme3_version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>${jme3_g}</groupId>
+            <groupId>${jme3_groupId}</groupId>
             <artifactId>jme3-lwjgl</artifactId>
-            <version>${jme3_v}</version>
+            <version>${jme3_version}</version>
         </dependency>
         <dependency>
-            <groupId>${jme3_g}</groupId>
+            <groupId>${jme3_groupId}</groupId>
             <artifactId>jme3-bullet</artifactId>
-            <version>${jme3_v}</version>
+            <version>${jme3_version}</version>
         </dependency>
         <dependency>
-            <groupId>${jme3_g}</groupId>
+            <groupId>${jme3_groupId}</groupId>
             <artifactId>jme3-plugins</artifactId>
-            <version>${jme3_v}</version>
+            <version>${jme3_version}</version>
         </dependency>
     </dependencies>
 
