--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <version>${jme3_version}</version>
         </dependency>
         <dependency>
+            <groupId>${jme3_groupId}</groupId>
+            <artifactId>jme3-niftygui</artifactId>
+            <version>${jme3_version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
@@ -71,6 +76,7 @@
             <version>3.15.0</version>
             <scope>test</scope>
         </dependency>
+
 
 
 
