Build warnings fix.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <jme3_version>3.2.2-stable</jme3_version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <repositories>
@@ -88,6 +89,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -96,7 +98,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${build.directory}/models
+                            <outputDirectory>${project.build.directory}/models
                             </outputDirectory>
                             <resources>
                                 <resource>
